# Changelog for gitlab-workhorse

Formerly known as 'gitlab-git-http-server'.

UNRELEASED

v 7.5.0

- Add proxy layer to calculate content type and disposition headers !335

v 7.4.0

- Strip port and include remote IP in access logs !337

v 7.3.0

- Redact sensitive url params as in Rails

v 7.2.1

- Extract correlation code out to the LabKit project !323
- Log X-Forwarded-For IPs when UNIX domain sockets are in use !324

v 7.2.0

- Update CI matrix to go1.10 + go1.11 and fix ResponseWriter bugs !309
- Add support for Redis URLs (redis:// and rediss://) in Workhorse !321

v 7.1.3

- Redact sensitive url params as in Rails

v 7.1.1

Bad release, use 7.2.0 instead.

v 7.1.0

- Add structured logFormat for text based logging !275
- Run make fmt on master !306
- Allow to configure `BUILD_DIR` and `TARGET_DIR` !308
- Resolve "Rework test suite to allow dead code to be removed" !307
- Update Prometheus vendoring !305
- General vendoring cleanup !310
- Remove Go 1.8 support !314
- Remove unused 'body' argument !315
- Refactor badgateway to use standardlib interfaces !316
- Pass Correlation-Ids down to backend systems !311
- Don't fail if /home/git/repositories already exists in Gitaly container !317

v 7.0.1

- Redact sensitive url params as in Rails

v 7.0.0

- Use the new Gitaly auth scheme (v2) !298

v 6.1.2

- Redact sensitive url params as in Rails

v 6.1.1

- Allow custom error messages to pass through to Rails !300

v 6.1.0

- Support adding PUT headers for object storage from Rails !297

v 6.0.0

- Accelerate Maven artifact repository uploads !283

v 5.2.0

- Populate Git Protocol !276
- Add support for GitConfigOptions required for git-receive-pack command !281


v 5.1.0

- Log using correlation-id bound to the incoming request !258
- Prevent uploading two files as artifacts in single request !273
- Prometheus instrumentation !279

v 5.0.0

- Update httprs for broken range implementations !266
- Direct Upload for User Uploads !265

v 4.3.1
