@@ -28,11 +28,11 @@ func getCorrelationID(ctx context.Context) string {
 	return correlationID
 }
 
-// WithContext provides a *logrus.Entry with the proper "correlation-id" field.
+// WithContext provides a *logrus.Entry with the proper "correlation_id" field.
 //
 // "[MISSING]" will be used when ctx has no value for KeyCorrelationID
 func WithContext(ctx context.Context) *logrus.Entry {
-	return logrus.WithField("correlation-id", getCorrelationID(ctx))
+	return logrus.WithField("correlation_id", getCorrelationID(ctx))
 }
 
 // NoContext provides logrus.StandardLogger()
@@ -40,22 +40,22 @@ func NoContext() *logrus.Logger {
 	return logrus.StandardLogger()
 }
 
-// WrapEntry adds the proper "correlation-id" field to the provided *logrus.Entry
+// WrapEntry adds the proper "correlation_id" field to the provided *logrus.Entry
 func WrapEntry(ctx context.Context, e *logrus.Entry) *logrus.Entry {
-	return e.WithField("correlation-id", getCorrelationID(ctx))
+	return e.WithField("correlation_id", getCorrelationID(ctx))
 }
 
-// WithFields decorates logrus.WithFields with the proper "correlation-id"
+// WithFields decorates logrus.WithFields with the proper "correlation_id"
 func WithFields(ctx context.Context, f Fields) *logrus.Entry {
 	return WithContext(ctx).WithFields(toLogrusFields(f))
 }
 
-// WithField decorates logrus.WithField with the proper "correlation-id"
+// WithField decorates logrus.WithField with the proper "correlation_id"
 func WithField(ctx context.Context, key string, value interface{}) *logrus.Entry {
 	return WithContext(ctx).WithField(key, value)
 }
 
-// WithError decorates logrus.WithError with the proper "correlation-id"
+// WithError decorates logrus.WithError with the proper "correlation_id"
 func WithError(ctx context.Context, err error) *logrus.Entry {
 	return WithContext(ctx).WithError(err)
 }
